<resources>
    <string name="app_name">Contact List</string>
    //Login
    <string name="usuario">Usuário</string>
    <string name="senha">Senha</string>
    <string name="login">Login</string>
    <string name="Nao_tem_conta_Cadastre_se">Não tem conta? Cadastre-se</string>
    //Cadastro
    <string name="recuperar_senha">Recuperar Senha</string>
    <string name="confirmar_senha">Confirmar Senha</string>
    <string name="cadastrar_se">Cadastrar-se</string>
    //Novo Contato
    <string name="cancelar">Cancelar</string>
    <string name="salvar">Salvar</string>
    <string name="n_mero_do_contato">Número do Contato</string>
    <string name="nome_do_contato">Nome do Contato</string>
</resources>