<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity">



    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:orientation="vertical"
        android:padding="20dp">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:layout_marginBottom="80dp"
            android:src="@drawable/icone_contato"/>

        <EditText
            android:id="@+id/editText_UsuarioDeCadastro"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:hint="@string/usuario"/>

        <EditText
            android:id="@+id/editText_SenhaDeCadastro"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:password="true"
            android:hint="@string/senha"/>
        <EditText
            android:id="@+id/editText_ConfirmarSenha"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:password="true"
            android:hint="@string/confirmar_senha"/>

        <TextView
            android:id="@+id/textViewErroNoCadastro"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/messagemDeErro"
            android:text="" />

        <Button
            android:id="@+id/button_Cadastrar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/botoes"
            android:text="@string/cadastrar_se"/>


    </LinearLayout>


</RelativeLayout>