<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity">



    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:orientation="vertical"
        android:padding="20dp">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:layout_marginBottom="80dp"
            android:backgroundTint="@color/botoes"
            android:src="@drawable/icone_contato"/>

        <EditText
            android:id="@+id/editText_Usuario"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:hint="@string/usuario"/>

        <EditText
            android:id="@+id/editText_Senha"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:password="true"
            android:hint="@string/senha"/>

        <TextView
            android:id="@+id/textViewErroDeLogin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/messagemDeErro"
            android:text="" />

        <CheckBox
            android:id="@+id/checkbox_Login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/manter_me_conectado"/>
        <Button
            android:id="@+id/button_Login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/botoes"
            android:text="@string/login"/>


    </LinearLayout>

    <TextView
        android:id="@+id/textView_Cadastro"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="20dp"
        android:gravity="center"
        android:clickable="true"
        android:text="@string/Nao_tem_conta_Cadastre_se" />

    <TextView
        android:id="@+id/textView_RecuperarSenha"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@id/textView_Cadastro"
        android:layout_marginVertical="20dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="20dp"
        android:gravity="center"
        android:clickable="true"
        android:text="@string/recuperar_senha" />


</RelativeLayout>