<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="10dp"
    tools:context=".NovoContatoActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="Novo Contato"
        android:textSize="30dp" />

    <ImageView
        android:id="@+id/imagem_foto"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:layout_marginVertical="10dp"
        android:src="@drawable/icon_profile" />

    <EditText
        android:id="@+id/editTextNomeDoNovoContato"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:hint="@string/nome_do_contato" />

    <EditText
        android:id="@+id/editTextNumeroDoNovoContato"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:hint="@string/n_mero_do_contato"
        android:inputType="phone" />

    <TextView
        android:id="@+id/textViewErroDeNovoContato"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/messagemDeErro"
        android:text="" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_margin="10dp">

        <Button
            android:id="@+id/buttonSalvarNovoContato"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:backgroundTint="@color/botoes"
            android:layout_marginHorizontal="5dp"
            android:text="@string/salvar" />
        <Button
            android:id="@+id/buttonCancelarNovoContato"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:backgroundTint="@color/botoes"
            android:layout_marginHorizontal="5dp"
            android:text="@string/cancelar" />

    </LinearLayout>

</LinearLayout>